--- a/login/login.html
+++ b/login/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +24,15 @@
         }
 
         .login-container img {
-            width: 100px; /* ปรับขนาดรูปภาพตามที่คุณต้องการ */
+            width: 100px;
             border-radius: 50%;
             margin-bottom: 20px;
+        }
+
+        .login-container .login-text {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 10px;
         }
 
         .login-container input {
@@ -46,16 +53,17 @@
     </style>
     <title>Login Page</title>
 </head>
+
 <body>
     <div class="login-container">
-        <img src="https://stickershop.line-scdn.net/stickershop/v1/product/1078222/LINEStorePC/main.png?v=1" alt="Logo"> 
+        <img src="https://stickershop.line-scdn.net/stickershop/v1/product/1078222/LINEStorePC/main.png?v=1" alt="Logo">
+        <div class="login-text">LOGIN</div>
         <form action="login.php" method="post">
-            <input type="text" name="username" placeholder="Username" required>
-            <br>
-            <input type="password" name="password" placeholder="Password" required>
-            <br>
+            <input type="text" name="username" placeholder="Username" required><br>
+            <input type="password" name="password" placeholder="Password" required><br>
             <button type="submit">Login</button>
         </form>
     </div>
 </body>
+
 </html>
