--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ margin-left: 100px;
 </head>
 <body>
 <div id="navbar">
-<a href="#" id="logo"><h1>Pilo</h1></a>
+<a href="#" id="logo"><h1>Pilo Hotel</h1></a>
 <ul>
 <li><a href="#">หน้าหลัก</a></li>
 <li><a href="#">จองห้อง</a></li>
