create booking page

--- a/booking.html
+++ b/booking.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="zxx">
-
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Sona Template">
-    <meta name="keywords" content="Sona, unica, creative, html">
+    <meta name="description" content="Room Detail - Cat Hotel">
+    <meta name="keywords" content="Cat Hotel, Room Detail, Pet-friendly rooms">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pilo | Template</title>
+    <title>Room Detail - Cat Hotel</title>
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
@@ -31,62 +30,6 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-
-    <!-- Offcanvas Menu Section Begin -->
-    <div class="offcanvas-menu-overlay"></div>
-    <div class="canvas-open">
-        <i class="icon_menu"></i>
-    </div>
-    <div class="offcanvas-menu-wrapper">
-        <div class="canvas-close">
-            <i class="icon_close"></i>
-        </div>
-        <div class="search-icon search-switch">
-            <i class="icon_search"></i>
-        </div>
-        <div class="header-configure-area">
-            <div class="language-option">
-                <img src="img/flag.jpg" alt="">
-                <span>EN <i class="fa fa-angle-down"></i></span>
-                <div class="flag-dropdown">
-                    <ul>
-                        <li><a href="#">Zi</a></li>
-                        <li><a href="#">Fr</a></li>
-                    </ul>
-                </div>
-            </div>
-            <a href="#" class="bk-btn">Booking Now</a>
-        </div>
-        <nav class="mainmenu mobile-menu">
-            <ul>
-                <li class="active"><a href="./index.html">Home</a></li>
-                <li><a href="./rooms.html">Rooms</a></li>
-                <li><a href="./about-us.html">About Us</a></li>
-                <li><a href="./pages.html">Pages</a>
-                    <ul class="dropdown">
-                        <li><a href="./room-details.html">Room Details</a></li>
-                        <li><a href="./blog-details.html">Blog Details</a></li>
-                        <li><a href="#">Family Room</a></li>
-                        <li><a href="#">Premium Room</a></li>
-                    </ul>
-                </li>
-                <li><a href="./blog.html">News</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <div id="mobile-menu-wrap"></div>
-        <div class="top-social">
-            <a href="#"><i class="fa fa-facebook"></i></a>
-            <a href="#"><i class="fa fa-twitter"></i></a>
-            <a href="#"><i class="fa fa-tripadvisor"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
-        </div>
-        <ul class="top-widget">
-            <li><i class="fa fa-phone"></i>081-123-4567</li>
-            <li><i class="fa fa-envelope"></i>PiloCatHotel@gmail.com</li>
-        </ul>
-    </div>
-    <!-- Offcanvas Menu Section End -->
 
     <!-- Header Section Begin -->
     <header class="header-section header-normal">
@@ -140,7 +83,7 @@
                                     <li><a href="./index.html">Home</a></li>
                                     <li><a href="./rooms.html">Rooms</a></li>
                                     <li><a href="./about-us.html">About Us</a></li>
-                                    <li><a href="./pages.html">Pages</a>
+                                    <li class="active"><a href="./pages.html">Pages</a>
                                         <ul class="dropdown">
                                             <li><a href="./room-details.html">Room Details</a></li>
                                             <li><a href="./blog-details.html">Blog Details</a></li>
@@ -149,7 +92,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="./blog.html">News</a></li>
-                                    <li class="active"><a href="./contact.html">Contact</a></li>
+                                    <li><a href="./contact.html">Contact</a></li>
                                 </ul>
                             </nav>
                             <div class="nav-right search-switch">
@@ -163,62 +106,86 @@
     </header>
     <!-- Header End -->
 
-    <!-- Contact Section Begin -->
-    <section class="contact-section spad">
+    <!-- Room Detail Section Begin -->
+    <section class="room-details spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="contact-text">
-                        <h2>Contact Info</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua.</p>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td class="c-o">Address:</td>
-                                    <td>856 Cordia Extension Apt. 356, Lake, US</td>
-                                </tr>
-                                <tr>
-                                    <td class="c-o">Phone:</td>
-                                    <td>(12) 345 67890</td>
-                                </tr>
-                                <tr>
-                                    <td class="c-o">Email:</td>
-                                    <td>info.colorlib@gmail.com</td>
-                                </tr>
-                                <tr>
-                                    <td class="c-o">Fax:</td>
-                                    <td>+(12) 345 67890</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                <div class="col-lg-8">
+                    <div class="room-details-item">
+                        <img src="img/room/room-details.jpg" alt="">
+                        <div class="rd-text">
+                            <div class="rd-title">
+                                <h3>Premium Suite Room</h3>
+                                <div class="rd-price">
+                                    <span>From</span>
+                                    <h2>$250<span>/night</span></h2>
+                                </div>
+                            </div>
+                            <div class="rd-feature-text">
+                                <h4 class="text-uppercase">Room facilities</h4>
+                                <div class="rd-feature">
+                                    <i class="icon_check"></i>
+                                    <span>Breakfast included</span>
+                                </div>
+                                <div class="rd-feature">
+                                    <i class="icon_check"></i>
+                                    <span>Free Wi-fi</span>
+                                </div>
+                                <div class="rd-feature">
+                                    <i class="icon_check"></i>
+                                    <span>Air conditioning</span>
+                                </div>
+                                <div class="rd-feature">
+                                    <i class="icon_check"></i>
+                                    <span>Room service</span>
+                                </div>
+                                <!-- Add more features as needed -->
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                                elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                                commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
+                                imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="col-lg-7 offset-lg-1">
-                    <form action="#" class="contact-form">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <input type="text" placeholder="Your Name">
+                <div class="col-lg-4">
+                    <div class="room-booking">
+                        <h3>Your Reservation</h3>
+                        <form action="#">
+                            <div class="check-date">
+                                <label for="date-in">Date In:</label>
+                                <input type="text" class="date-input" id="date-in" placeholder="dd / mm / yyyy">
+                                <i class="icon_calendar"></i>
                             </div>
-                            <div class="col-lg-6">
-                                <input type="text" placeholder="Your Email">
+                            <div class="check-date">
+                                <label for="date-out">Date Out:</label>
+                                <input type="text" class="date-input" id="date-out" placeholder="dd / mm / yyyy">
+                                <i class="icon_calendar"></i>
                             </div>
-                            <div class="col-lg-12">
-                                <textarea placeholder="Your Message"></textarea>
-                                <button type="submit">Submit Now</button>
+                            <div class="select-option">
+                                <label for="room-type">Room Type:</label>
+                                <select class="suit-select" id="room-type">
+                                    <option value="">Premium Suite Room</option>
+                                    <!-- Add more room types as needed -->
+                                </select>
                             </div>
-                        </div>
-                    </form>
+                            <div class="select-option">
+                                <label for="guests">Guests:</label>
+                                <select class="suit-select" id="guests">
+                                    <option value="">1 Adult</option>
+                                    <option value="">2 Adults</option>
+                                    <option value="">3 Adults</option>
+                                    <!-- Add more options as needed -->
+                                </select>
+                            </div>
+                            <button type="submit" class="site-btn btn-sm">Book Now</button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-            <div class="map">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.0606825994123!2d-72.8735845851828!3d40.760690042573295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e85b24c9274c91%3A0xf310d41b791bcb71!2sWilliam%20Floyd%20Pkwy%2C%20Mastic%20Beach%2C%20NY%2C%20USA!5e0!3m2!1sen!2sbd!4v1578582744646!5m2!1sen!2sbd"
-                    height="470" style="border:0;" allowfullscreen=""></iframe>
             </div>
         </div>
     </section>
-    <!-- Contact Section End -->
+    <!-- Room Detail Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
@@ -289,11 +256,13 @@
 
     <!-- Search model Begin -->
     <div class="search-model">
-        <div class="h-100 d-flex align-items-center justify-content-center">
-            <div class="search-close-switch"><i class="icon_close"></i></div>
-            <form class="search-model-form">
-                <input type="text" id="search-input" placeholder="Search here.....">
-            </form>
+        <div class="search-model">
+            <div class="h-100 d-flex align-items-center justify-content-center">
+                <div class="search-close-switch"><i class="icon_close"></i></div>
+                <form class="search-model-form">
+                    <input type="text" id="search-input" placeholder="Search here.....">
+                </form>
+            </div>
         </div>
     </div>
     <!-- Search model end -->
