--- a/contact.html
+++ b/contact.html
@@ -280,9 +280,9 @@
                         </ul>
                     </div>
                     <div class="col-lg-5">
-                        <div class="co-text"><p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p></div>
+                        <div class="co-text">PiloCatHotel<p>
+   &copy;<script>document.write(new Date().getFullYear());</script>\<i class="fa fa-heart" aria-hidden="true"></i><a href="" target="_blank"></a>
+</p></div>
                     </div>
                 </div>
             </div>
