--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
             <button type="submit">Login</button>
         </form>
        
-        <a class="signup-link" href="file:///D:/HTML/Scrum_05/sing%20up/sing%20up.html">Sign Up</a>
+        <a class="signup-link" href="file:///D:/HTML/Scrum_05/sing%20up.html">Sign Up</a>
     </div>
 </body>
 
