--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <li><a href="contact.html">ติดต่อ</a></li>
 
 </ul>
-<a href="หน้าที่คุณต้องการลิงก์ไป"><button>Login</button></a>
+<a href="login.html"><button>Login</button></a>
 </div>
 <div class="hero">
 <div>
