--- a/login.html
+++ b/login.html
@@ -54,7 +54,6 @@
             cursor: pointer;
         }
 
-        /* Add the following CSS for the Sign Up link */
         .signup-link {
             position: absolute;
             bottom: 10px;
@@ -77,7 +76,7 @@
             <button type="submit">Login</button>
         </form>
        
-        <a class="signup-link" href="file:///D:/HTML/Scrum_05/sing%20up.html">Sign Up</a>
+        <a class="signup-link" href="sing%20up.html">Sign Up</a>
     </div>
 </body>
 
