--- a/login.html
+++ b/login.html
@@ -76,7 +76,7 @@
             <button type="submit">Login</button>
         </form>
        
-        <a class="signup-link" href="sing%20up.html">Sign Up</a>
+        <a class="signup-link" href="sign%20up.html">Sign Up</a>
     </div>
 </body>
 
