--- a/login.html
+++ b/login.html
@@ -73,7 +73,7 @@
         <form action="login.php" method="post">
             <input type="text" name="username" placeholder="Username" required><br>
             <input type="password" name="password" placeholder="Password" required><br>
-            <button type="submit">Login</button>
+            <button type="submit" onclick="window.location.href='index.html'">Login</button>
         </form>
        
         <a class="signup-link" href="sign%20up.html">Sign Up</a>
