--- a/login.html
+++ b/login.html
@@ -16,7 +16,15 @@
             justify-content: center;
             height: 100vh;
         }
-
+        .login-container {
+        width: 250px; /* Adjust the width as needed */
+        height: 400px; /* Adjust the height as needed */
+        background: rgba(255, 255, 255, 0.8);
+        padding: 20px; /* Adjust the padding as needed */
+        border-radius: 20px; /* Adjust the border-radius as needed */
+        text-align: center;
+        position: relative;
+    }
         .login-container {
             background: rgba(255, 255, 255, 0.8);
             padding: 20px;
