--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         .hero {
             width: 100%;
             height: 100vh;
-            background: url(image/image02.jpg);
+            background: url(img/Cat_index_Bg.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             filter: saturate(100%);
