--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <ul>
 <li><a href="#">หน้าหลัก</a></li>
 <li><a href="https://www.traveloka.com/th-th/">จองห้อง</a></li>
-<li><a href="#">การดูแล</a></li>
+<li><a href="#">แกลลอรี่</a></li>
 <li><a href="contact.html">ติดต่อ</a></li>
 </ul>
 <a href="login.html"><button>Login</button></a>
