--- a/about-us.html
+++ b/about-us.html
@@ -129,7 +129,7 @@
                     <div class="col-lg-2">
                         <div class="logo">
                             <a href="./index.html">
-                                <img src="img/logo.png" alt="">
+                                <img src="img/2.jpg" alt="">
                             </a>
                         </div>
                     </div>
@@ -208,23 +208,23 @@
             <div class="about-page-services">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="ap-service-item set-bg" data-setbg="img/about/about-p1.jpg">
+                        <div class="ap-service-item set-bg" data-setbg="img/Services.jpeg">
                             <div class="api-text">
-                                <h3>Restaurants Services</h3>
+                                <h3 style="color: rgb(217, 140, 58);">Restaurants Services</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="ap-service-item set-bg" data-setbg="img/about/about-p2.jpg">
+                        <div class="ap-service-item set-bg" data-setbg="img/takingcat.jpeg">
                             <div class="api-text">
-                                <h3>Travel & Camping</h3>
+                                <h3 style="color: rgb(217, 140, 58);">Cat care service</h3>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="ap-service-item set-bg" data-setbg="img/about/about-p3.jpg">
+                        <div class="ap-service-item set-bg" data-setbg="img/catplayin.jpeg">
                             <div class="api-text">
-                                <h3>Event & Party</h3>
+                                <h3 style="color: rgba(217, 140, 58);">The cat plays happily</h3>
                             </div>
                         </div>
                     </div>
