--- a/booking.html
+++ b/booking.html
@@ -72,7 +72,7 @@
                     <div class="col-lg-2">
                         <div class="logo">
                             <a href="./index.html">
-                                <img src="img/logo.png" alt="">
+                                <img src="img/2.jpg" alt="">
                             </a>
                         </div>
                     </div>
@@ -112,9 +112,7 @@
             <div class="row">
                 <div class="col-lg-8">
                     <div class="room-details-item">
-                        <div id="room-image">
-                            <!-- รูปภาพจะถูกแสดงที่นี่ -->
-                        </div>
+                        <div id="room-image"></div>
                         <div class="rd-price">
                             <span>From</span>
                             <h2 id="room-price">$250<span>/night</span></h2>
@@ -127,12 +125,11 @@
                                 <span id="outdoor-play"></span>
                             </div>
                         </div>
-                            </div>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                                 elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
                                 commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
-                                imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-                        </div>
+                                imperdiet. Nunc ut sem vitae risus tristique posuere.
+                            </p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -192,7 +189,7 @@
                         <div class="ft-about">
                             <div class="logo">
                                 <a href="#">
-                                    <img src="img/footer-logo.png" alt="">
+                                    <img src="img/1.png" alt="">
                                 </a>
                             </div>
                             <p>We inspire and reach millions of travelers<br /> across 90 local websites</p>
@@ -278,27 +275,28 @@
 
             // นำค่าที่เลือกไปแสดงผล
             if (selectedRoomType === "Standard Room") {
-                $("#room-image").html('<img src="img/standard-room.jpg" alt="Standard Room">');
+                $("#room-image").html('<img src="img/room/standard-room.jpg" alt="Standard Room">');
                 $("#room-title").text("Standard Room");
                 $("#room-price").text("$250/night");
                 $("#outdoor-play").text("1 Cat, Outdoor play area included");
             } else if (selectedRoomType === "Supreme Room") {
-                $("#room-image").html('<img src="img/supreme-room.jpg" alt="Supreme Room">');
+                $("#room-image").html('<img src="img/room/supreme-room.jpg" alt="Supreme Room">');
                 $("#room-title").text("Supreme Room");
                 $("#room-price").text("$400/night");
                 $("#outdoor-play").text("3 Cats, Outdoor play area included");
             } else if (selectedRoomType === "Deluxe Room") {
-                $("#room-image").html('<img src="img/deluxe-room.jpg" alt="Deluxe Room">');
+                $("#room-image").html('<img src="img/room/deluxe-room.jpg" alt="Deluxe Room">');
                 $("#room-title").text("Deluxe Room");
                 $("#room-price").text("$550/night");
                 $("#outdoor-play").text("6 Cats, Outdoor play area included");
             } else if (selectedRoomType === "Sweet Room") {
-                $("#room-image").html('<img src="img/sweet-room.jpg" alt="Sweet Room">');
+                $("#room-image").html('<img src="img/room/sweet-room.jpg" alt="Sweet Room">');
                 $("#room-title").text("Sweet Room");
                 $("#room-price").text("$900/night");
                 $("#outdoor-play").text("10 Cats, No outdoor play area");
             } else {
                 // หากไม่พบประเภทห้องที่ตรงกับที่กำหนด ให้เคลียร์ข้อมูล
+                $("#room-title").text("");
                 $("#room-price").text("");
                 $("#outdoor-play").text("");
             }
