--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <a href="#" id="logo"><h1>Pilo Cat Hotel</h1></a>
 <ul>
 <li><a href="#">หน้าหลัก</a></li>
-<li><a href="https://www.traveloka.com/th-th/">จองห้อง</a></li>
+<li><a href="booking.html">จองห้อง</a></li>
 <li><a href="#">แกลลอรี่</a></li>
 <li><a href="contact.html">ติดต่อ</a></li>
 </ul>
