--- a/contact.html
+++ b/contact.html
@@ -69,9 +69,9 @@
     <div id="navbar">
         <a href="#" id="logo"><h1>Pilo Cat Hotel</h1></a>
         <ul>
-            <li><a href="index.html">หน้าหลัก</a></li>
-            <li><a href="https://www.traveloka.com/th-th/">จองห้อง</a></li>
-            <li><a href="#">การดูแล</a></li>
+            <li><a href="#">หน้าหลัก</a></li>
+            <li><a href="booking.html">จองห้อง</a></li>
+            <li><a href="#">แกลลอรี่</a></li>
             <li><a href="contact.html">ติดต่อ</a></li>
         </ul>
         <a href="login.html"><button>Login</button></a>
