--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,8 @@
         </ul>
         <a href="login.html"><button>Login</button></a>
     </div>
+    
+    <div style="padding-top: 100px;"></div>
 
     <!-- Contact Section Begin -->
     <section class="contact-section spad">
