--- a/booking.html
+++ b/booking.html
@@ -8,9 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Room Detail - Cat Hotel</title>
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -23,88 +20,75 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+    
+    <style type="text/css">
+        * {
+            padding: 0;
+            margin: 0;
+            font-family: Arial;
+            box-sizing: border-box;
+        }
+
+        #navbar {
+            padding: 25px 40px;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 99;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            background: #fff;
+            box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.5);
+            transition: .4s;
+            backdrop-filter: blur(5px);
+        }
+
+        #logo {
+            color: #FB6F92;
+            font-size: 23px;
+            width: 200px;
+            transition: .4s;
+            text-decoration: none;
+        }
+
+        #navbar ul {
+            display: flex;
+            list-style: none;
+            width: 300px;
+            justify-content: space-between;
+        }
+
+        #navbar ul li a {
+            text-decoration: none;
+            color: #000;
+        }
+
+        #navbar button {
+            width: 150px;
+            height: 40px;
+            border: none;
+            background: #fb6f92;
+            color: #fff;
+            cursor: pointer;
+        }
+   
+
+    </style>
 </head>
 
 <body>
-    <!-- Page Preloder -->
-    <div id="preloder">
-        <div class="loader"></div>
+    <div id="navbar">
+        <a href="#" id="logo"><h1>Pilo Cat Hotel</h1></a>
+        <ul>
+            <li><a href="index.html">หน้าหลัก</a></li>
+            <li><a href="booking.html">จองห้อง</a></li>
+            <li><a href="#">แกลลอรี่</a></li>
+            <li><a href="contact.html">ติดต่อ</a></li>
+        </ul>
+        <a href="login.html"><button>Login</button></a>
     </div>
-
-    <!-- Header Section Begin -->
-    <header class="header-section header-normal">
-        <div class="top-nav">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <ul class="tn-left">
-                            <li><i class="fa fa-phone"></i>081-123-4567</li>
-                            <li><i class="fa fa-envelope"></i>PiloCatHotel@gmail.com</li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="tn-right">
-                            <div class="top-social">
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-tripadvisor"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
-                            <a href="#" class="bk-btn">Booking Now</a>
-                            <div class="language-option">
-                                <img src="img/flag.jpg" alt="">
-                                <span>EN <i class="fa fa-angle-down"></i></span>
-                                <div class="flag-dropdown">
-                                    <ul>
-                                        <li><a href="#">Zi</a></li>
-                                        <li><a href="#">Fr</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="menu-item">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2">
-                        <div class="logo">
-                            <a href="./index.html">
-                                <img src="img/2.jpg" alt="">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col-lg-10">
-                        <div class="nav-menu">
-                            <nav class="mainmenu">
-                                <ul>
-                                    <li><a href="./index.html">Home</a></li>
-                                    <li><a href="./rooms.html">Rooms</a></li>
-                                    <li><a href="./about-us.html">About Us</a></li>
-                                    <li class="active"><a href="./pages.html">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="./room-details.html">Room Details</a></li>
-                                            <li><a href="./blog-details.html">Blog Details</a></li>
-                                            <li><a href="#">Family Room</a></li>
-                                            <li><a href="#">Premium Room</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="./blog.html">News</a></li>
-                                    <li><a href="./contact.html">Contact</a></li>
-                                </ul>
-                            </nav>
-                            <div class="nav-right search-switch">
-                                <i class="icon_search"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <!-- Header End -->
+    <div style="padding-top: 100px;"></div>
 
     <!-- Room Detail Section Begin -->
     <section class="room-details spad">
@@ -121,25 +105,15 @@
                             <h4 class="text-uppercase">Room facilities</h4>
                             <!-- ... -->
                             <div class="rd-feature">
-                                <i class="icon_check"></i>
-                                <span>Numbers of cat:</span>
-                                <span id="numbers-cat"></span>
-                            </div>
-                            <div class="rd-feature">
-                                <i class="icon_check"></i>
-                                <span>Outdoor plays:</span>
+                                <span>Outdoor play area:</span>
                                 <span id="outdoor-play"></span>
                             </div>
-                            <div class="rd-feature">
-                                <i class="icon_check"></i>
-                                <span>Room sizes:</span>
-                                <span id="room-sizes"></span>
-                            </div>
-                            <div class="rd-feature">
-                                <i class="icon_check"></i>
-                                <span>Cat spa</span>
-                            </div>
                         </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                                elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
+                                commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem
+                                imperdiet. Nunc ut sem vitae risus tristique posuere.
+                            </p>
                     </div>
                 </div>
                 <div class="col-lg-4">
@@ -287,31 +261,23 @@
             if (selectedRoomType === "Standard Room") {
                 $("#room-image").html('<img src="img/room/standard-room.jpg" alt="Standard Room">');
                 $("#room-title").text("Standard Room");
-                $("#room-price").text("฿250/night");
-                $("#numbers-cat").text("Up to 1 Cat");
-                $("#outdoor-play").text("Outdoor play area included");
-                $("#room-sizes").text("1 x 1.25 x 2.4 m.");
+                $("#room-price").text("$250/night");
+                $("#outdoor-play").text("1 Cat, Outdoor play area included");
             } else if (selectedRoomType === "Supreme Room") {
                 $("#room-image").html('<img src="img/room/supreme-room.jpg" alt="Supreme Room">');
                 $("#room-title").text("Supreme Room");
-                $("#room-price").text("฿400/night");
-                $("#numbers-cat").text("Up to 3 Cat");
-                $("#outdoor-play").text("Outdoor play area included");
-                $("#room-sizes").text("1.5 x 1.5 x 2.6 m.");
+                $("#room-price").text("$400/night");
+                $("#outdoor-play").text("3 Cats, Outdoor play area included");
             } else if (selectedRoomType === "Deluxe Room") {
                 $("#room-image").html('<img src="img/room/deluxe-room.jpg" alt="Deluxe Room">');
                 $("#room-title").text("Deluxe Room");
-                $("#room-price").text("฿550/night");
-                $("#numbers-cat").text("Up to 6 Cat");
-                $("#outdoor-play").text("Outdoor play area included");
-                $("#room-sizes").text("1.9 x 1.25 x 2.6 m.");
+                $("#room-price").text("$550/night");
+                $("#outdoor-play").text("6 Cats, Outdoor play area included");
             } else if (selectedRoomType === "Sweet Room") {
                 $("#room-image").html('<img src="img/room/sweet-room.jpg" alt="Sweet Room">');
                 $("#room-title").text("Sweet Room");
-                $("#room-price").text("฿900/night");
-                $("#numbers-cat").text("Up to 10 Cat");
-                $("#outdoor-play").text("Outdoor play area not included");
-                $("#room-sizes").text("1.6 x 2.15 x 2.8 m.");
+                $("#room-price").text("$900/night");
+                $("#outdoor-play").text("10 Cats, No outdoor play area");
             } else {
                 // หากไม่พบประเภทห้องที่ตรงกับที่กำหนด ให้เคลียร์ข้อมูล
                 $("#room-title").text("");
